Base Trips management

--- a/BaseExampleAngularCore/appsettings.json
+++ b/BaseExampleAngularCore/appsettings.json
@@ -3,5 +3,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "TripDBConnection": "Server=tcp:webserver1.database.windows.net,1433;Initial Catalog=Trip;Persist Security Info=False;User ID=kjarosz;Password=Borchdiowol1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
